Fix serviceworker (missing file plus minor layout bug

--- a/planner/FuzzyPlan20211002.css
+++ b/planner/FuzzyPlan20211002.css
@@ -800,7 +800,7 @@ html {
 
 .backupDistanceBetweenButtons {
   display: inline-block;
-  width: 100px;
+  width: 53px;
 }
 
 .labelText {
